Many small style fixes.  System tests still pass (for me, at least).